--- a/package.json
+++ b/package.json
@@ -7,22 +7,21 @@
     "test": "test"
   },
   "dependencies": {
-    "symphony-fnannotate": "~0.1.0"
+    "symphony-fnannotate": "~0.2.0"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-istanbul": "~0.2.3",
-    "grunt-contrib-jshint": "~0.6.4",
+    "grunt-contrib-jshint": "~0.9.2",
     "grunt-simple-mocha": "~0.4.0",
-    "grunt-contrib-watch": "~0.5.3",
-    "dateformat": "~1.0.6-1.2.3",
-    "should": "~2.0.2",
+    "grunt-contrib-watch": "~0.6.1",
+    "should": "~3.1.4",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-devtools": "~0.2.1",
-    "mocha": "~1.13.0",
+    "mocha": "~1.18.2",
     "spec": "~1.0.0",
-    "grunt-contrib-copy": "~0.4.1",
-    "grunt-istanbul-coverage": "0.0.2",
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-istanbul-coverage": "~0.0.5",
     "grunt-complexity": "~0.1.4"
   },
   "scripts": {
