--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "dependencies": {
-    "symphony-fnannotate": "~0.2.0"
+    "symphony-fnannotate": "^0.2.0"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
